Testing and making it faster

--- a/hawc_data_reader/test_like.ipynb
+++ b/hawc_data_reader/test_like.ipynb
@@ -20,6 +20,7 @@
    ],
    "source": [
     "from threeML import *\n",
+    "\n",
     "from HAWCpyLike import HAWCpyLike\n",
     "import region_of_interest\n",
     "\n",
@@ -39,6 +40,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Creating singleton for /home/giacomov/science/hawc/data/response.root\n",
       "Response: \n",
       "----------\n",
       "\n",
@@ -231,7 +233,7 @@
      "output_type": "stream",
      "text": [
       "This Map Tree contains 911.282 transits\n",
-      "Total data size: 1.91576 Mbyte\n",
+      "Total data size: 1.92 Mb\n",
       "\n",
       "Active energy/nHit planes: \n",
       "---------------------------\n",
@@ -259,35 +261,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using dec bin 57 for source CrabNebula\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Widget Javascript not detected.  It may not be installed or enabled properly.\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dac4d6292dfc4259949b543286903593"
-      }
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "spectrum = Log_parabola()\n",
     "\n",
@@ -311,36 +289,70 @@
     "\n",
     "model = Model(source)\n",
     "\n",
-    "data = DataList(hawc)\n",
-    "\n",
-    "jl = JointLikelihood(model, data)"
+    "data = DataList(hawc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
+   "outputs": [],
+   "source": [
+    "import gc\n",
+    "\n",
+    "gc.collect()\n",
+    "\n",
+    "def test(n=20):\n",
+    "\n",
+    "    for i in range(n):\n",
+    "\n",
+    "        jl = JointLikelihood(model, data)\n",
+    "\n",
+    "        print(hawc._convolved_point_sources.size)\n",
+    "\n",
+    "        print(hawc.get_log_like())\n",
+    "\n",
+    "        #-665379.26889922551\n",
+    "\n",
+    "        jl.set_minimizer(\"ROOT\")\n",
+    "        par, like = jl.fit(quiet=True)\n",
+    "\n",
+    "        gc.collect()\n",
+    "\n",
+    "        print(i)\n",
+    "    return par, like\n",
+    "        \n",
+    "# (9.88 -0.17 +0.18) x 10^-2\n",
+    "# -2.790 +/- 0.020\n",
+    "# (1.570 +/- 0.12) x 10^-1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/latex": [
-       "$1.91576 \\; \\mathrm{Mbyte}$"
-      ],
-      "text/plain": [
-       "<Quantity 1.91576 Mbyte>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.91576 Mbyte\n",
+      "-658299.0704460987\n",
+      "0\n",
+      "658299.0704460987\n"
+     ]
     }
    ],
    "source": [
-    "hawc._convolved_point_sources.size"
+    "par, like = test(1)\n",
+    "\n",
+    "print like['-log(likelihood)']['HAWC']"
    ]
   },
   {
@@ -353,20 +365,15 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "-665379.26889922551"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.16227766017e-12 1 / (cm2 s TeV)\n"
+     ]
     }
    ],
    "source": [
-    "hawc.get_log_like()\n",
-    "\n",
-    "#-310426.9997955779"
+    "print spectrum(1.0 * u.TeV).to(1/(u.TeV * u.cm**2 * u.s))"
    ]
   },
   {
@@ -377,234 +384,11 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best fit values:\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "WARNING UserWarning: get_number_of_data_points not implemented, values for statistical measurements such as AIC or BIC are unreliable\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>result</th>\n",
-       "      <th>unit</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>parameter</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>CrabNebula.spectrum.main.Log_parabola.K</th>\n",
-       "      <td>(9.88 -0.17 +0.18) x 10^-23</td>\n",
-       "      <td>1 / (cm2 keV s)</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CrabNebula.spectrum.main.Log_parabola.alpha</th>\n",
-       "      <td>-2.790 +/- 0.020</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CrabNebula.spectrum.main.Log_parabola.beta</th>\n",
-       "      <td>(1.570 +/- 0.12) x 10^-1</td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                                  result  \\\n",
-       "parameter                                                                  \n",
-       "CrabNebula.spectrum.main.Log_parabola.K      (9.88 -0.17 +0.18) x 10^-23   \n",
-       "CrabNebula.spectrum.main.Log_parabola.alpha             -2.790 +/- 0.020   \n",
-       "CrabNebula.spectrum.main.Log_parabola.beta      (1.570 +/- 0.12) x 10^-1   \n",
-       "\n",
-       "                                                        unit  \n",
-       "parameter                                                     \n",
-       "CrabNebula.spectrum.main.Log_parabola.K      1 / (cm2 keV s)  \n",
-       "CrabNebula.spectrum.main.Log_parabola.alpha                   \n",
-       "CrabNebula.spectrum.main.Log_parabola.beta                    "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Correlation matrix:\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table id=\"table139922301500560\">\n",
-       "<tr><td>1.00</td><td>-0.17</td><td>0.66</td></tr>\n",
-       "<tr><td>-0.17</td><td>1.00</td><td>-0.78</td></tr>\n",
-       "<tr><td>0.66</td><td>-0.78</td><td>1.00</td></tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       " 1.00 -0.17  0.66\n",
-       "-0.17  1.00 -0.78\n",
-       " 0.66 -0.78  1.00"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Values of -log(likelihood) at the minimum:\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>-log(likelihood)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>HAWC</th>\n",
-       "      <td>658296.890516</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>total</th>\n",
-       "      <td>658296.890516</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       -log(likelihood)\n",
-       "HAWC      658296.890516\n",
-       "total     658296.890516"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Values of statistical measures:\n",
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>statistical measures</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>AIC</th>\n",
-       "      <td>1.316592e+06</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BIC</th>\n",
-       "      <td>1.316594e+06</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     statistical measures\n",
-       "AIC          1.316592e+06\n",
-       "BIC          1.316594e+06"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "jl.set_minimizer(\"ROOT\")\n",
-    "_ = jl.fit()\n",
+    "from test import test, one_fit\n",
     "\n",
-    "#3.15e-11,2.37,42.3"
+    "%load_ext memory_profiler"
    ]
   },
   {
@@ -620,13 +404,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.65251009992e-11 1 / (cm2 s TeV)\n"
+      "1.91576 Mbyte\n",
+      "-665386.678363433\n",
+      "('',)\n"
      ]
     }
    ],
    "source": [
-    "print spectrum(1.0 * u.TeV).to(1/(u.TeV * u.cm**2 * u.s))"
+    "%mprun -f one_fit one_fit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-911104515e30>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpympler\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtracker\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtracker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSummaryTracker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/giacomov/work_env/local/lib/python2.7/site-packages/pympler/tracker.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, ignore_self)\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0mignore_self\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m \u001b[0msummaries\u001b[0m \u001b[0mmanaged\u001b[0m \u001b[0mby\u001b[0m \u001b[0mthis\u001b[0m \u001b[0mobject\u001b[0m \u001b[0mwill\u001b[0m \u001b[0mbe\u001b[0m \u001b[0mignored\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \"\"\"\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msummary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummarize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmuppy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_objects\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummaries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mignore_self\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mignore_self\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/home/giacomov/work_env/local/lib/python2.7/site-packages/pympler/muppy.pyc\u001b[0m in \u001b[0;36mget_objects\u001b[0;34m(remove_dups, include_frames)\u001b[0m\n\u001b[1;32m     48\u001b[0m                 \u001b[0;31m# we already got the container objects, now we only add\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m                 \u001b[0;31m# non-container objects\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m                 \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mref\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m     \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mremove_dups\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "source": [
+    "from test import test, one_fit\n",
+    "from pympler import tracker\n",
+    "\n",
+    "tr = tracker.SummaryTracker()\n",
+    "\n",
+    "test()\n",
+    "\n",
+    "tr.print_diff() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
