--- a/hawc_data_reader/test_like.ipynb
+++ b/hawc_data_reader/test_like.ipynb
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -333,66 +333,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.91576 Mbyte\n",
-      "-658299.0704460987\n",
-      "0\n",
-      "658299.0704460987\n"
-     ]
-    }
-   ],
-   "source": [
-    "par, like = test(1)\n",
-    "\n",
-    "print like['-log(likelihood)']['HAWC']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.16227766017e-12 1 / (cm2 s TeV)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print spectrum(1.0 * u.TeV).to(1/(u.TeV * u.cm**2 * u.s))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
-   "outputs": [],
-   "source": [
-    "from test import test, one_fit\n",
-    "\n",
-    "%load_ext memory_profiler"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": false,
@@ -405,13 +345,73 @@
      "output_type": "stream",
      "text": [
       "1.91576 Mbyte\n",
-      "-665386.678363433\n",
-      "('',)\n"
+      "-658299.0704516124\n",
+      "0\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "1\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "2\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "3\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "4\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "5\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "6\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "7\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "8\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "9\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "10\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "11\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "12\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "13\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "14\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "15\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "16\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "17\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "18\n",
+      "1.91576 Mbyte\n",
+      "-658299.0704484112\n",
+      "19\n",
+      "658299.0704484112\n"
      ]
     }
    ],
    "source": [
-    "%mprun -f one_fit one_fit()"
+    "par, like = test()\n",
+    "\n",
+    "print like['-log(likelihood)']['HAWC']"
    ]
   },
   {
@@ -424,28 +424,15 @@
    },
    "outputs": [
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-8-911104515e30>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mpympler\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtracker\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mtr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtracker\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mSummaryTracker\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mtest\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/giacomov/work_env/local/lib/python2.7/site-packages/pympler/tracker.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, ignore_self)\u001b[0m\n\u001b[1;32m     43\u001b[0m         \u001b[0mignore_self\u001b[0m \u001b[0;34m-\u001b[0m\u001b[0;34m-\u001b[0m \u001b[0msummaries\u001b[0m \u001b[0mmanaged\u001b[0m \u001b[0mby\u001b[0m \u001b[0mthis\u001b[0m \u001b[0mobject\u001b[0m \u001b[0mwill\u001b[0m \u001b[0mbe\u001b[0m \u001b[0mignored\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m         \"\"\"\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ms0\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msummary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummarize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmuppy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_objects\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummaries\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mignore_self\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mignore_self\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/home/giacomov/work_env/local/lib/python2.7/site-packages/pympler/muppy.pyc\u001b[0m in \u001b[0;36mget_objects\u001b[0;34m(remove_dups, include_frames)\u001b[0m\n\u001b[1;32m     48\u001b[0m                 \u001b[0;31m# we already got the container objects, now we only add\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     49\u001b[0m                 \u001b[0;31m# non-container objects\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 50\u001b[0;31m                 \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mref\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     51\u001b[0m     \u001b[0mres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mextend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtmp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     52\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mremove_dups\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.65762003706e-11 1 / (cm2 s TeV)\n"
      ]
     }
    ],
    "source": [
-    "from test import test, one_fit\n",
-    "from pympler import tracker\n",
-    "\n",
-    "tr = tracker.SummaryTracker()\n",
-    "\n",
-    "test()\n",
-    "\n",
-    "tr.print_diff() "
+    "print spectrum(1.0 * u.TeV).to(1/(u.TeV * u.cm**2 * u.s))"
    ]
   },
   {
